Messing with page alignment.

--- a/layout-v2/index.html
+++ b/layout-v2/index.html
@@ -12,16 +12,15 @@
 </head>
 <body>
     <div class="pwrapper">
-        <div class="wrapper">
-            <div class="banner">
+
+        <div class="sidebar">
+            <div class="header">
                 <h1>
                     <a href="/">
                         limpygnome
                     </a>
                 </h1>
             </div>
-        </div>
-        <div class="wrapper">
             <div class="nav">
 
                 <div id="nav_cv">
@@ -67,18 +66,19 @@
                 </div>
 
             </div>
+        </div>
+
+        <div class="wrapper">
             <div class="content">
-                <div class="inner_content ">
 
                     <p class="tac">
                         <img src="content/images/welcome/me.png" alt="limpygnome" class="home">
                     </p>
                     
-                    <div class="clear"></div>
-                </div>
             </div>
             <div class="clear"></div>
         </div>
+
         <div class="footer-icons">
             <a title="Github" class="icon gh" href="https://www.github.com/limpygnome">
                 Github
