New layout needs font icons.

--- a/layout-v2/index.html
+++ b/layout-v2/index.html
@@ -80,28 +80,28 @@
         </div>
 
         <div class="footer-icons">
-            <a title="Github" class="icon gh" href="https://www.github.com/limpygnome">
+            <a title="Github" class="ficon gh" href="https://www.github.com/limpygnome">
                 Github
             </a>
-            <a title="YouTube" class="icon yt" href="https://www.youtube.com/user/limpygnome">
+            <a title="YouTube" class="ficon yt" href="https://www.youtube.com/user/limpygnome">
                 YouTube
             </a>
-            <a title="SoundCloud" class="icon sc" href="https://www.soundcloud.com/limpygnome">
+            <a title="SoundCloud" class="ficon sc" href="https://www.soundcloud.com/limpygnome">
                 SoundCloud
             </a>
-            <a title="LinkedIn" class="icon li" href="http://www.linkedin.com/in/marcuscraske">
+            <a title="LinkedIn" class="ficon li" href="http://www.linkedin.com/in/marcuscraske">
                 LinkedIn
             </a>
-            <a title="Google Plus" class="icon gp" href="https://plus.google.com/102279851938943898719">
+            <a title="Google Plus" class="ficon gp" href="https://plus.google.com/102279851938943898719">
                 Google Plus
             </a>
-            <a title="Twitter" class="icon twt" href="https://twitter.com/Limpygnome">
+            <a title="Twitter" class="ficon twt" href="https://twitter.com/Limpygnome">
                 Twitter
             </a>
-            <a title="Facebook" class="icon fb" href="https://www.facebook.com/marcus.craske">
+            <a title="Facebook" class="ficon fb" href="https://www.facebook.com/marcus.craske">
                 Facebook
             </a>
-            <a title="E-mail" class="icon gm" href="mailto:limpygnome@gmail.com">
+            <a title="E-mail" class="ficon gm" href="mailto:limpygnome@gmail.com">
                 E-mail
             </a>
         </div>
