New layout working.

--- a/layout-v2/index.html
+++ b/layout-v2/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans">
     <link rel="stylesheet" type="text/css" href="content/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="content/fonts/icomoon/style.css" />
+
 </head>
 <body>
     <div class="pwrapper">
@@ -25,42 +27,42 @@
 
                 <div id="nav_cv">
                     <a href="/cv">
-                        <img alt="Cirriculum Vitae" src="/content/images/nav/cv.png" />
+                        <span class="icon-file-text2"></span>
                         Curriculum Vitae
                     </a>
                 </div>
                 <div id="nav_main">
                     <a href="/articles">
-                        <img alt="Me" src="/content/images/nav/me.png" />
+                        <span class="icon-books"></span>
                         Articles
                     </a>
                     <a href="/projects">
-                        <img alt="Me" src="/content/images/nav/me.png" />
+                        <span class="icon-lab"></span>
                         Projects
                     </a>
                     <a href="/timeline">
-                        <img alt="Me" src="/content/images/nav/me.png" />
+                        <span class="icon-airplane"></span>
                         Timeline
                     </a>
                     <a href="/music">
-                        <img alt="Contact" src="/content/images/nav/contact.png" />
+                        <span class="icon-music"></span>
                         Music
                     </a>
                 </div>
                 <div id="nav_misc">
                     <a href="/tools">
-                        <img alt="Contact" src="/content/images/nav/contact.png" />
+                        <span class="icon-cog"></span>
                         Tools
                     </a>
                     <a href="http://public.limpygnome.com">
-                        <img alt="Me" src="/content/images/nav/me.png" />
+                        <span class="icon-folder-open"></span>
                         Public Files
                     </a>
                 </div>
 
                 <div id="nav_contact">
                     <a href="/contact">
-                        <img alt="Contact" src="/content/images/nav/contact.png" />
+                        <span class="icon-phone"></span>
                         Contact
                     </a>
                 </div>
