--- a/layout-v2/index.html
+++ b/layout-v2/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans">
     <link rel="stylesheet" type="text/css" href="content/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="content/css/responsive.css" />
     <link rel="stylesheet" type="text/css" href="content/fonts/icomoon/style.css" />
 
 </head>
