Cleanup of new layout.

--- a/layout-v2/index.html
+++ b/layout-v2/index.html
@@ -8,9 +8,14 @@
     <meta http-equiv="/content-type" content="text/html;charset=utf-8" />
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans">
-    <link rel="stylesheet" type="text/css" href="content/css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="content/css/responsive.css" />
     <link rel="stylesheet" type="text/css" href="content/fonts/icomoon/style.css" />
+
+    <link rel="stylesheet" type="text/css" href="content/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="content/css/layout-responsive.css" />
+
+    <link rel="stylesheet" type="text/css" href="content/css/content/elements.css" />
+
+    <link rel="stylesheet" type="text/css" href="content/css/pages/home.css" />
 
 </head>
 <body>
@@ -71,14 +76,12 @@
             </div>
         </div>
 
-        <div class="wrapper">
-            <div class="content">
+        <div class="content">
 
-                    <p class="tac">
-                        <img src="content/images/welcome/me.png" alt="limpygnome" class="home">
-                    </p>
-                    
-            </div>
+                <p class="tac">
+                    <img src="content/images/welcome/me.png" alt="limpygnome" class="home">
+                </p>
+
             <div class="clear"></div>
         </div>
 
