More general progress with project section and posts.

--- a/website/projects.html
+++ b/website/projects.html
@@ -4,16 +4,83 @@ title: projects
 selected: projects
 ---
 
-<ul>
+<ul id="projects">
+
     <li>
-        <a href="">
-            <img src="" alt="" />
-            <b>
-                Project Title
-            </b>
-            <span>
-                project description...
-            </span>
-        </a>
+        <h2>
+            <a href="/projects/project-sandbox">
+                <img src="/assets/projects/project-sandbox/thumb.png" alt="Project Sandbox project thumbnail" />
+                Project Sandbox
+            </a>
+        </h2>
+        <p>
+            2D WebGL multi-player game, using websockets, with: AI, inventories, large open worlds, tile worlds,
+            player-persistence, map-editor and more.
+        </p>
     </li>
+
+    <li>
+        <h2>
+            <a href="/projects/delay-piggy">
+                <img src="/assets/projects/delay-piggy/thumb.png" alt="Delay Piggy project thumbnail" />
+                Delay Piggy
+            </a>
+        </h2>
+        <p>
+            Quick project to create a piggy with glowing eyes to warn of train delays.
+        </p>
+    </li>
+
+    <li>
+        <h2>
+            <a href="/projects/build-tv">
+                <img src="/assets/projects/build-tv/thumb.png" alt="Build TV project thumbnail" />
+                Build TV
+            </a>
+        </h2>
+        <p>
+            Micro-service architecture build TV / information radiator, with automated deployments using Ansible.
+            Used to aggregate information from Jenkins, Jira, and other sources, to display build and development
+            information.
+        </p>
+    </li>
+
+    <li>
+        <h2>
+            <a href="/projects/pals">
+                <img src="/assets/projects/pals/thumb.png" alt="PALS project thumbnail" />
+                PALS - Programming Assessment and Learning System
+            </a>
+        </h2>
+        <p>
+            An open source platform for automated and distributed marking of programming assessments, completed as an
+            undergraduate project.
+        </p>
+    </li>
+
+    <li>
+        <h2>
+            <a href="/projects/binary-clock">
+                <img src="/assets/projects/binary-clock/thumb.png" alt="Binary clock project thumbnail" />
+                Binary Clock
+            </a>
+        </h2>
+        <p>
+            Version two of my binary clock electronics project, using a Raspberry Pi. Written in C++ with a threaded
+            web server for front-end configuration.
+        </p>
+    </li>
+
+    <li>
+        <h2>
+            <a href="/projects/portable-postgres">
+                <img src="/assets/projects/portable-postgres/thumb.png" alt="Portable Postgres project thumbnail" />
+                Portable Postgres
+            </a>
+        </h2>
+        <p>
+            Standalone portable application for managing a Postgres database server for development.
+        </p>
+    </li>
+
 </ul>
