--- a/website/projects.html
+++ b/website/projects.html
@@ -6,81 +6,19 @@ selected: projects
 
 <ul id="projects">
 
+    {% assign sortedProjects = site.projects | sort: 'priority' | reverse %}
+    {% for project in sortedProjects %}
     <li>
         <h2>
-            <a href="/projects/project-sandbox">
-                <img src="/assets/projects/project-sandbox/thumb.png" alt="Project Sandbox project thumbnail" />
-                Project Sandbox
+            <a href="{{ project.url }}">
+                <img src="{{ project.thumbnail }}" alt="{{ project.title }} project thumbnail" />
+                {{ project.title }}
             </a>
         </h2>
         <p>
-            2D WebGL multi-player game, using websockets, with: AI, inventories, large open worlds, tile worlds,
-            player-persistence, map-editor and more.
+            {{ project.excerpt | remove: '<p>' | remove: '</p>' }}
         </p>
     </li>
-
-    <li>
-        <h2>
-            <a href="/projects/delay-piggy">
-                <img src="/assets/projects/delay-piggy/thumb.png" alt="Delay Piggy project thumbnail" />
-                Delay Piggy
-            </a>
-        </h2>
-        <p>
-            Quick project to create a piggy with glowing eyes to warn of train delays.
-        </p>
-    </li>
-
-    <li>
-        <h2>
-            <a href="/projects/build-tv">
-                <img src="/assets/projects/build-tv/thumb.png" alt="Build TV project thumbnail" />
-                Build TV
-            </a>
-        </h2>
-        <p>
-            Micro-service architecture build TV / information radiator, with automated deployments using Ansible.
-            Used to aggregate information from Jenkins, Jira, and other sources, to display build and development
-            information.
-        </p>
-    </li>
-
-    <li>
-        <h2>
-            <a href="/projects/pals">
-                <img src="/assets/projects/pals/thumb.png" alt="PALS project thumbnail" />
-                PALS - Programming Assessment and Learning System
-            </a>
-        </h2>
-        <p>
-            An open source platform for automated and distributed marking of programming assessments, completed as an
-            undergraduate project.
-        </p>
-    </li>
-
-    <li>
-        <h2>
-            <a href="/projects/binary-clock">
-                <img src="/assets/projects/binary-clock/thumb.png" alt="Binary clock project thumbnail" />
-                Binary Clock
-            </a>
-        </h2>
-        <p>
-            Version two of my binary clock electronics project, using a Raspberry Pi. Written in C++ with a threaded
-            web server for front-end configuration.
-        </p>
-    </li>
-
-    <li>
-        <h2>
-            <a href="/projects/portable-postgres">
-                <img src="/assets/projects/portable-postgres/thumb.png" alt="Portable Postgres project thumbnail" />
-                Portable Postgres
-            </a>
-        </h2>
-        <p>
-            Standalone portable application for managing a Postgres database server for development.
-        </p>
-    </li>
+    {% endfor %}
 
 </ul>
