Adding skip to main content to CV.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -11,12 +11,18 @@ layout: compress
     {% endcss_asset_tag bundle %}
 </head>
 <body>
+
+    <a id="skip-to-content" href="#wrapper">
+        Skip to main content
+    </a>
+
     <div class="options">
         <a href="/">Home</a>
         <a href="/cv" onclick="window.print();">Print</a>
         <a href="/assets/cv.pdf">Download as PDF</a>
         <a href="mailto:limpygnome@gmail.com">E-mail</a>
     </div>
+
     <div id="wrapper" class="wrapper">
         <h1>
             Marcus Craske
