--- a/public-files/index.html
+++ b/public-files/index.html
@@ -26,23 +26,21 @@
     Modified by Nolan Lawson!  (http://nolanlawson.com).  I'm keeping the spirit of the
     GPL alive by issuing this with the same license!
 
-    https://github.com/nolanlawson/pretty-s3-index-html
-
     -->
 
     <title>Bucket loading...</title>
     <link href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet"/>
     <style>
-	    .hide-while-loading {
-	      display:none;
-	    }
-	    .i-expand-collapse {
-	      opacity: 0.3;
-	    }
-	    .i-file-or-folder {
-	      margin-right: 4px;
-	    }
-	  </style>
+        .hide-while-loading {
+        display:none;
+        }
+        .i-expand-collapse {
+        opacity: 0.3;
+        }
+        .i-file-or-folder {
+        margin-right: 4px;
+        }
+    </style>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.1.2/handlebars.min.js"></script>
@@ -91,7 +89,9 @@
 		var GB = 1000000000;
 
     // replace last /index.html to get bucket root
-	  var bucketUrl = document.location.href.replace(/\/[^\/]+$/, '');
+	  //var bucketUrl = document.location.href.replace(/\/[^\/]+$/, '');
+    var bucketUrl = "//public.limpygnome.com.s3.amazonaws.com";
+    var maskUrl = "//public.limpygnome.com"
 		var compiledTemplate;
 
     // return e.g. 1.2KB, 1.3MB, 2GB, etc.
@@ -110,7 +110,7 @@
 
 
 	  // POJO describing a file or a folder
-	  function FileOrFolder(lastModified, etag, size, key){
+	  function FileOrFolder(lastModified, etag, size, key, isForcedFolder){
 	    var self = this;
 
 	    self.lastModified = lastModified;
@@ -118,24 +118,31 @@
 	    self.size = size;
 	    self.key = key;
 
+        // generate id
+        self.id = self.key.replace(/\//g, "__");
+
 	    // init logic
-	    self.isFolder = FOLDER_PATTERN.test(self.key);
+	    self.isFolder = isForcedFolder || FOLDER_PATTERN.test(self.key);
 	    self.filename = self.isFolder ? self.key.replace(FOLDER_PATTERN,'') : self.key;
 	    self.url = bucketUrl + '/' + self.key;
+	    self.url = self.url.replace(bucketUrl, maskUrl);
 	    self.levels = self.filename.split('/');
 	    self.numLevels = self.levels.length;
 	    self.simpleFilename = self.levels[self.numLevels - 1];
 	    self.friendlySizeName = toFriendlySizeName(parseInt(self.size,10));
 	    var foundTypes = TYPE_PATTERN.exec(self.simpleFilename);
 	    self.type = self.isFolder ? 'Folder ' : (foundTypes ? (foundTypes[1].toUpperCase() + ' file') : 'Unknown');
-	    self.friendlyLastModified = moment(lastModified).format('MMM Do YYYY, hh:mm:ss a');
+	    self.friendlyLastModified = lastModified ? moment(lastModified).format('MMM Do YYYY, hh:mm:ss a') : "";
+
+        // set parent
+	    self.parent = self.key.substring(0, self.key.length - (self.simpleFilename.length + 1));
 	  }
 
 		function onAjaxSuccess(xml) {
 			var listBucketResult = $(xml).find('ListBucketResult');
 
 			// set a reasonable title instead of "Bucket loading"
-			var title = 'Index of bucket "' + listBucketResult.find('Name').text() + '"';
+			var title = maskUrl.replace(/\//g, "");
 			document.title = title;
 			$('#h1-title').text(title);
 
@@ -149,6 +156,7 @@
 
 				var $element = $(element);
 
+				// build element
 				var fileOrFolder = new FileOrFolder(
 					 $element.find('LastModified').text(),
 					 $element.find('ETag').text(),
@@ -156,7 +164,43 @@
 					 $element.find('Key').text()
 				);
 
-				filesOrFolders.push(fileOrFolder);
+                // check if parent dirs to this folder have been defined or not...
+                if (fileOrFolder.parent.length > 0)
+                {
+                    var parentPaths = fileOrFolder.parent.split("/");
+                    var currentPath;
+                    var isParentMissing;
+
+                    for (var i = 0; i < parentPaths.length; i++)
+                    {
+                        // build current path being inspected
+                        if (i == 0)
+                            currentPath = parentPaths[0];
+                        else
+                            currentPath += "/" + parentPaths[i];
+
+                        // check if parent of last item is same as this item, otherwise add new parent...
+                        isParentMissing = filesOrFolders.length == 0 || !filesOrFolders[filesOrFolders.length -1].parent.startsWith(currentPath);
+
+                        if (isParentMissing)
+                        {
+                            var parentFolder = new FileOrFolder(
+                                null,
+                                null,
+                                0,
+                                currentPath,
+                                true
+                            );
+
+                            // add parent to array
+                            filesOrFolders.push(parentFolder);
+                        }
+                    }
+				}
+
+				// add file to array
+                filesOrFolders.push(fileOrFolder);
+
 			});
 
 			// sort
