Changes for parrot manager, changes to general post layouts and excerpts.

--- a/website/projects.html
+++ b/website/projects.html
@@ -16,7 +16,7 @@ selected: projects
             </a>
         </h2>
         <p>
-            {{ project.excerpt | remove: '<p>' | remove: '</p>' }}
+            {{ project.excerpt }}
         </p>
     </li>
     {% endfor %}
