--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@ sectionid: "home"
                 </a>
             </h3>
             <p>
-                {{ post.excerpt | remove: '<p>' | remove: '</p>' }} ...
+                {{ post.excerpt }} ...
             </p>
         </article>
 
