Adding defcon 25 post, improving overall styling, still need to finish slack article.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -17,7 +17,7 @@ layout: compress
     </a>
 
     <div class="options">
-        <a href="/">Home</a>
+        <a href="/">Back</a>
         <a href="/cv" onclick="window.print();">Print</a>
         <a href="/assets/cv.pdf">Download as PDF</a>
         <a href="mailto:limpygnome@gmail.com">E-mail</a>
