--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@ sectionid: "home"
 hideHeader: true
 ---
 
-{% for post in site.posts %}
+{% for post in paginator.posts %}
 
     {% if post.hidden == null %}
 
