--- a/website/music/songs.html
+++ b/website/music/songs.html
@@ -1,20 +1,16 @@
 ---
 layout: post
-title: music - songs
+title: Songs
 selected: music
 ---
 
 <p>
-    Below are songs I have written, with the exception of covers, which may be used in both commercial and non-commercial work, as long as credit is given.
-    Usage of covered songs requires permission from the original authors. Most of the work below has been made for fun and is experimental.
-</p>
-<p>
-    I use my own HTML5 audio player below, made for a bit of fun, so do <a href="/contact">contact</a> me if you experience any issues.
+    Below are songs I have written or covered, just experimenting and made for fun.
 </p>
 
-<h1>
+<h2>
     Unorganised
-</h1>
+</h2>
 
 <script type="text/javascript">
 {
@@ -39,9 +35,9 @@ selected: music
 </script>
 
 
-<h1>
+<h2>
     Noise
-</h1>
+</h2>
 
 <script type="text/javascript">
 {
@@ -60,9 +56,9 @@ selected: music
 </script>
 
 
-<h1>
+<h2>
     Covers
-</h1>
+</h2>
 
 <script type="text/javascript">
 {
