--- a/website/projects.html
+++ b/website/projects.html
@@ -4,6 +4,11 @@ title: Projects
 selected: projects
 ---
 
+<p>
+    Collection of larger projects from my free time, refer to my
+    <a href="https://github.com/limpygnome?tab=repositories">Github</a> for the complete list.
+</p>
+
 <ul id="projects">
 
     {% assign sortedProjects = site.projects | sort: 'priority' | reverse %}
