--- a/website/projects.html
+++ b/website/projects.html
@@ -25,7 +25,7 @@ selected: projects
             </a>
         </h2>
         <p>
-            {{ project.excerpt | truncatewords: 20 }}
+            {{ project.excerpt | strip_html | truncatewords: 20 }}
         </p>
     </li>
     {% endfor %}
