Minor tweaks, updating cv.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -30,14 +30,6 @@ layout: compress
         <div class="contact">
             <div class="info">
                 <div class="th">
-                    t:
-                </div>
-                <div class="td">
-                    (+44) 01603 700798
-                </div>
-                <div class="clear"></div>
-
-                <div class="th">
                     m:
                 </div>
                 <div class="td">
@@ -50,9 +42,9 @@ layout: compress
                 <a href="https://www.limpygnome.com">https://www.limpygnome.com</a>
             </div>
             <div class="address">
-                20 Davidson Road<br />
-                Norwich<br />
-                NR7 0XW
+                26 Market Street<br />
+                Ely<br />
+                CB7 4LS
             </div>
             <div class="clear"></div>
         </div>
@@ -67,10 +59,22 @@ layout: compress
                         March 2015 - Present
                     </div>
                     <div class="text">
-                        <b>Worldpay</b> - Senior Software Engineer <i>- promoted November 2015</i><br />
-                        Working on HPP (Hosted Payment Pages), the next generation of payment pages for online
+                        <b>Worldpay / FIS</b> - <i>Senior Software Engineer - promoted November 2015,</i><br />
+                        <i>Software Engineer</i><br />
+                        Working on HPP (Hosted Payment Pages) platform, the next generation of payment pages for online
                         commerce. Supporting multiple languages, currencies, international alternative payment methods
-                        and card schemes. Using Spring, Ansible, Oracle stack (Weblogic, DB, Coherence), AWS and Tomcat.
+                        and card schemes. Used by well-known retailers, corporates, government agencies and smaller businesses.<br />
+                        <br />
+                        Technical lead working with the business (product manager, project owner, service owners, architecture, enterprise security,
+                        other teams, etc) to implement projects, release lead, defining release process and SDLC, mentoring, department presentations, shifting
+                        platform from propietary licensing to save costs, code reviews, high-level designs, responsible for platform security,
+                        interviewing candidates, improving interview process.<br />
+                        <br />
+                        Using Java 11, Spring Boot, Kubernetes, Docker containers, OpenShift, Ansible, Oracle stack (Weblogic, DB, Coherence),
+                        AWS, Fastly, Angular and much more.<br />
+                        <br />
+                        Experience with working on legacy gateway, mission critical, high-throughput systems. Migrating legacy systems. Based in team using agile,
+                        transformed from Scrum to Kanban, using Jira and physical walls.
                     </div>
                 </div>
                 <div class="item">
@@ -78,7 +82,7 @@ layout: compress
                         Nov 2014 - March 2015
                     </div>
                     <div class="text">
-                        <b>Proxama</b> - Software Engineer<br />
+                        <b>Proxama</b> - <i>Software Engineer</i><br />
                         Working on a PCI-compliant product, CardGateway, to provide token and risk management of
                         contactless payments for Visa and MasterCard. Using JEE6, Glassfish and C#.
                     </div>
@@ -88,7 +92,7 @@ layout: compress
                         Aug 2014 - Oct 2014
                     </div>
                     <div class="text">
-                        <b>Proxama</b> - Research &amp; Development<br />
+                        <b>Proxama</b> - <i>Research &amp; Development</i><br />
                         Design of the CardGateway Issuer System product, graph databases for risk analysis, EMVTT / PoS solution.
                         Software for demos presented to tier one/two clients, including major banks.
                     </div>
@@ -98,7 +102,7 @@ layout: compress
                         2013
                     </div>
                     <div class="text">
-                        <b>Teaching Lab Assistant</b> - helped with <i>Discover Computing</i> school visit.
+                        <b>University of East Anglia</b> - <i>Teaching Lab Assistant</i> - helped with <i>Discover Computing</i> school visit.
                     </div>
                 </div>
             </div>
@@ -124,7 +128,7 @@ layout: compress
                     <div class="text">
                         <b>Misc.</b> - SQL (MySQL, Postgres, MSSQL), HTML5, CSS3, PHP, Android, OpenGL, ASP.NET,
                         Java EE, Glassfish/Tomcat, Resource Adapters, JMS, Hibernate, Git, Jenkins, JUnit, Mockito, Docker, Maven, Checkstyle,
-                        Ant, dependency injection, Agile / Scrum, WSDL, SOAP, REST, LDAP/AD, design patterns, Jira.
+                        Ant, dependency injection, Agile / Scrum / Kanban, WSDL, SOAP, REST, LDAP/AD, design patterns, Jira.
                     </div>
                 </div>
             </div>
@@ -266,8 +270,7 @@ layout: compress
             <div class="content">
                 <div class="item">
                     <div class="text">
-                        Road cycling, projects (such as a C++ Raspberry Pi binary clock with a multi-threaded web server),
-                        music (electric guitar and synth).
+                        Road cycling, projects (as seen on website), music.
                     </div>
                 </div>
             </div>
@@ -288,12 +291,6 @@ layout: compress
             <div class="clear"></div>
         </div>
 
-    </div>
-
-    <div class="options">
-        <a href="http://get.adobe.com/reader">
-            Download PDF reader
-        </a>
     </div>
 
 </body>
