Updating job status, fix for invalid chars in cv.

--- a/website/timeline.html
+++ b/website/timeline.html
@@ -6,6 +6,14 @@ selected: timeline
 
 <div class="timeline">
     <time>
+        2019
+    </time>
+    <div class="item">
+        <h3>
+            Promoted to Principal Engineer
+        </h3>
+    </div>
+    <time>
         2015
     </time>
     <div class="item">
