--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -59,7 +59,8 @@ layout: compress
                         March 2015 - Present
                     </div>
                     <div class="text">
-                        <b>Worldpay / FIS</b> - <i>Senior Software Engineer - promoted November 2015,</i><br />
+                        <b>Worldpay / FIS</b> - <i>Principal Software Engineer - promoted December 2019,</i><br />
+                        <i>Senior Software Engineer - promoted November 2015,</i><br />
                         <i>Software Engineer</i><br />
                         Working on HPP (Hosted Payment Pages) platform, the next generation of payment pages for online
                         commerce. Supporting multiple languages, currencies, international alternative payment methods
@@ -68,7 +69,7 @@ layout: compress
                         Technical lead working with the business (product manager, project owner, service owners, architecture, enterprise security,
                         other teams, etc) to implement projects, release lead, defining release process and SDLC, mentoring, department presentations, shifting
                         platform from propietary licensing to save costs, code reviews, high-level designs, responsible for platform security,
-                        interviewing candidates, improving interview process.<br />
+                        interviewing candidates, improving interview process, running sessions with support teams.<br />
                         <br />
                         Using Java 11, Spring Boot, Kubernetes, Docker containers, OpenShift, Ansible, Oracle stack (Weblogic, DB, Coherence),
                         AWS, Fastly, Angular and much more.<br />
@@ -116,19 +117,21 @@ layout: compress
             <div class="content">
                 <div class="item">
                     <div class="text">
-                        <b>Languages</b> - Java, C#, C/C++ (inc. 11), Matlab, JavaScript, VB.NET, Assembly.
+                        <b>Languages</b> - Java, C#, C/C++ (inc. 11), JavaScript, TypeScript, NodeJS, Matlab, VB.NET, Assembly.
                     </div>
                 </div>
                 <div class="item">
                     <div class="text">
-                        <b>Platforms</b> - Linux (Arch, Debian, Ubuntu), Windows (inc. Server 2003/2008), ARM Cortex M, Raspberry Pi, Verifone VX 820 PoS PED.
+                        <b>Platforms</b> - Linux (Arch, Debian, Ubuntu), Mac, Windows (inc. Server 2003/2008), Raspberry Pi, ARM Cortex M, Verifone VX 820 PoS PED.
                     </div>
                 </div>
                 <div class="item">
                     <div class="text">
-                        <b>Misc.</b> - SQL (MySQL, Postgres, MSSQL), HTML5, CSS3, PHP, Android, OpenGL, ASP.NET,
-                        Java EE, Glassfish/Tomcat, Resource Adapters, JMS, Hibernate, Git, Jenkins, JUnit, Mockito, Docker, Maven, Checkstyle,
-                        Ant, dependency injection, Agile / Scrum / Kanban, WSDL, SOAP, REST, LDAP/AD, design patterns, Jira.
+                        <b>Misc.</b> - SQL (Oracle, MySQL, Postgres, MSSQL), HTML5, CSS3, Spring Boot, PHP, Android,
+                        OpenGL, ASP.NET, Java EE, Glassfish/Tomcat, Resource Adapters, JMS, Hibernate, Git, Jenkins,
+                        JUnit, Mockito, Docker, Maven, Checkstyle, Ant, dependency injection, Agile / Scrum / Kanban,
+                        SaFE, WSDL, SOAP, REST, LDAP/AD, design patterns, Jira, Mongo, React Native, ReactJS, Redux,
+                        Gulp, Grunt.
                     </div>
                 </div>
             </div>
@@ -145,17 +148,17 @@ layout: compress
                         2014
                     </div>
                     <div class="text">
-                        <b>Bachelor of Science (BSc)</b> – Computer Science<br />
-                        First Class (Honours) Starred (I*) – 83.48% weighted average<br />
+                        <b>Bachelor of Science (BSc)</b> - Computer Science<br />
+                        First Class (Honours) Starred (I*) - 83.48% weighted average<br />
                         University of East Anglia<br />
                         <br />
-                        Year 1: 90.71% – <i>Computing Fundamentals, Computing Revolution,
+                        Year 1: 90.71% - <i>Computing Fundamentals, Computing Revolution,
                         Mathematics for Computing A, Computing Systems 1, Computing Systems 2,
                         Programming 1.</i><br />
-                        Year 2: 81.77% – <i>Theoretical Computing, Database Systems, Graphics 1,
+                        Year 2: 81.77% - <i>Theoretical Computing, Database Systems, Graphics 1,
                         Architectures & Operating Systems, Data Structures & Algorithms,
                         Programming 2.</i><br />
-                        Year 3: 82.66% – <i>Information Retrieval, Embedded Systems, Networks,
+                        Year 3: 82.66% - <i>Information Retrieval, Embedded Systems, Networks,
                         Software Engineering 2, Project.</i>
                     </div>
                 </div>
