Updates for site relaunch.

--- a/public-files/index.html
+++ b/public-files/index.html
@@ -61,7 +61,7 @@
             Bucket loading...
         </h1>
         <p class="options">
-            <a href="https://limpygnome.com">
+            <a href="https://marcuscraske.com">
                 Back
             </a>
         </p>
@@ -78,7 +78,7 @@
             </tbody>
         </table>
         <p class="options">
-            <a href="https://limpygnome.com">
+            <a href="https://marcuscraske.com">
                 Back
             </a>
         </p>
@@ -111,8 +111,8 @@
 
           // replace last /index.html to get bucket root
           // var bucketUrl = document.location.href.replace(/\/[^\/]+$/, '');
-          var bucketUrl = "//public-limpygnome.s3.amazonaws.com";
-          var maskUrl = "//public.limpygnome.com"
+          var bucketUrl = "//public-marcuscraske.s3.amazonaws.com";
+          var maskUrl = "//public.marcuscraske.com"
           var compiledTemplate;
 
           // return e.g. 1.2KB, 1.3MB, 2GB, etc.
