--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -20,7 +20,7 @@ layout: compress
         <a href="/">Back</a>
         <a href="/cv" onclick="window.print();">Print</a>
         <a href="/assets/cv.pdf">Download as PDF</a>
-        <a href="mailto:limpygnome@gmail.com?subject=Marcus%20Craske%20CV&body=https%3A%2F%2Flimpygnome.com%2Fcv">E-mail</a>
+        <a href="mailto:contact@marcuscraske.com?subject=Marcus%20Craske%20CV&body=https%3A%2F%2Fmarcuscraske.com%2Fcv">E-mail</a>
     </div>
 
     <div id="wrapper" class="wrapper">
@@ -38,10 +38,10 @@ layout: compress
                 <div class="clear"></div>
             </div>
             <div class="internet">
-                <a href="mailto:limpygnome@gmail.com">limpygnome@gmail.com</a>
+                <a href="mailto:limpygnome@gmail.com">contact@marcuscraske.com</a>
             </div>
             <div class="address">
-                <a href="https://www.limpygnome.com">https://limpygnome.com</a>
+                <a href="https://marcus.engineer">https://marcus.engineer</a>
             </div>
             <div class="clear"></div>
         </div>
@@ -68,8 +68,8 @@ layout: compress
                         enterprise architecture, enterprise security, other teams, etc) to implement projects, release
                         lead, defining release process and SDLC, mentoring, department presentations, shifting
                         platform from proprietary licensing to save costs, code reviews, high-level designs,
-                        responsible for platform security, interviewing candidates, improving interview process,
-                        running training sessions with various teams, BRO model / on-call production support.<br />
+                        platform security, interviewing candidates, improving interview process,
+                        running training sessions with various teams, platform architecture, on-call production support.<br />
                         <br />
                         Using Java 11, Spring Boot, Kubernetes, Docker containers, AWS, OpenShift, Ansible, historically
                         Oracle stack (Weblogic, DB, Coherence), Fastly, Angular and much more.<br />
