--- a/public-files/index.html
+++ b/public-files/index.html
@@ -111,8 +111,8 @@
 
           // replace last /index.html to get bucket root
           // var bucketUrl = document.location.href.replace(/\/[^\/]+$/, '');
-          var bucketUrl = "//public-marcuscraske.s3.amazonaws.com";
-          var maskUrl = "//public.marcuscraske.com"
+          var bucketUrl = "//files-marcuscraske-dot-com.s3.amazonaws.com";
+          var maskUrl = "//files.marcuscraske.com"
           var compiledTemplate;
 
           // return e.g. 1.2KB, 1.3MB, 2GB, etc.
