Public files, minor updates.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -5,6 +5,7 @@ layout: compress
 <html lang="en">
 <head>
     <title>Curriculum Vitae</title>
+    <meta name="robots" content="noindex">
     <meta name="description" content="My curriculum vitae, a record of personal achievements and progress.">
     {% css_asset_tag bundle %}
     - /_assets/cv.css
@@ -19,7 +20,7 @@ layout: compress
     <div class="options">
         <a href="/">Back</a>
         <a href="/cv" onclick="window.print();">Print</a>
-        <a href="/assets/cv.pdf">Download as PDF</a>
+        <a href="/cv/marcus-craske.pdf">Download as PDF</a>
         <a href="mailto:contact@marcuscraske.com?subject=Marcus%20Craske%20CV&body=https%3A%2F%2Fmarcuscraske.com%2Fcv">E-mail</a>
     </div>
 
@@ -38,7 +39,7 @@ layout: compress
                 <div class="clear"></div>
             </div>
             <div class="internet">
-                <a href="mailto:limpygnome@gmail.com">contact@marcuscraske.com</a>
+                <a href="mailto:contact@marcuscraske.com">contact@marcuscraske.com</a>
             </div>
             <div class="address">
                 <a href="https://marcus.engineer">https://marcus.engineer</a>
