Minor accessibility fixes, moving towards webp, minor article updates, upgrading dependencies, start of new smart house article.

--- a/website/error.html
+++ b/website/error.html
@@ -1,13 +1,9 @@
 ---
 layout: page
-title: Error
+title: Page Not Found
 selected: none
 ---
 
 <p>
-    Page not found.
-</p>
-
-<p>
-    <a href="/">Home?</a>
+    Check the URL is correct, otherwise please <a href="/contact">contact me</a> if you need help.
 </p>
