--- a/public-files/index.html
+++ b/public-files/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>
             Public Files
         </title>
+        <meta name="robots" content="noindex">
+        <meta name="description" content="Public files.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5, minimum-scale=1">
         <style type="text/css">
             body
             {
@@ -19,6 +23,14 @@
                 padding-bottom: 0.5em;
                 background: #000;
                 color: #fff;
+            }
+            @media only screen and (max-width: 1000px)
+            {
+                h1
+                {
+                    padding: 0.5em;
+                    font-size: 1.3rem;
+                }
             }
             h1 a
             {
